src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__int_assignment_validation.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: diagnostics
---
error[E037]: Invalid assignment: cannot assign 'STRING' to 'UDINT'
   ┌─ <internal>:41:5
   │
41 │     v_udint := v_string; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'UDINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'UDINT'
   ┌─ <internal>:42:5
   │
42 │     v_udint := STRING#'string'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'UDINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'UDINT'
   ┌─ <internal>:43:5
   │
43 │     v_udint := 'string'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'UDINT'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'UDINT'
   ┌─ <internal>:44:5
   │
44 │     v_udint := v_char; // INVALID
   │     ^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'UDINT'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'UDINT'
   ┌─ <internal>:45:5
   │
45 │     v_udint := CHAR#'c'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'UDINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'UDINT'
   ┌─ <internal>:49:5
   │
49 │     v_udint := v_ptr_string^; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'UDINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'UDINT'
   ┌─ <internal>:51:5
   │
51 │     v_udint := v_arr_string_3[0]; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'UDINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:64:5
   │
64 │     v_dint := v_string; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:65:5
   │
65 │     v_dint := STRING#'string'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:66:5
   │
66 │     v_dint := 'string'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'DINT'
   ┌─ <internal>:67:5
   │
67 │     v_dint := v_char; // INVALID
   │     ^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'DINT'

error[E037]: Invalid assignment: cannot assign 'CHAR' to 'DINT'
   ┌─ <internal>:68:5
   │
68 │     v_dint := CHAR#'c'; // INVALID
   │     ^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'CHAR' to 'DINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:72:5
   │
72 │     v_dint := v_ptr_string^; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'DINT'
   ┌─ <internal>:74:5
   │
74 │     v_dint := v_arr_string_3[0]; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'DINT'


